[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Sam Willcocks <sam@wlcx.cc>"]
edition = "2018"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
