[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Sam Willcocks <sam@wlcx.cc>"]
edition = "2018"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"

[[bin]]
name = "day8"
path = "src/day8.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[[bin]]
name = "day14"
path = "src/day14.rs"

[[bin]]
name = "day17"
path = "src/day17.rs"

[[bin]]
name = "day20"
path = "src/day20.rs"

[dependencies]
itertools = "*"
regex = "1"
lazy_static = "1.4.0"
nom = "6"
bitvec = "*"
